feat: initial Laser pointer mvp

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,7 +213,8 @@
     "lock": "Keep selected tool active after drawing",
     "penMode": "Prevent pinch-zoom and accept freedraw input only from pen",
     "link": "Add/ Update link for a selected shape",
-    "eraser": "Eraser"
+    "eraser": "Eraser",
+    "laser": "Laser pointer"
   },
   "headings": {
     "canvasActions": "Canvas actions",
